test/e2e/parser/eof.cl
class Test {
  baz():String { 1 + 2 * 3 };
};

1 + 2 * 3
